--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -1,8 +1,13 @@
 cmake_minimum_required(VERSION 3.1.2)
 project(conan-soci-test CXX)
 
+find_package(PostgreSQL REQUIRED)
+
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup(TARGETS)
 
+include_directories(
+    ${PostgreSQL_INCLUDE_DIRS})
+
 add_executable(test-empty test-empty.cpp)
-target_link_libraries(test-empty CONAN_PKG::SOCI CONAN_PKG::catch)
+target_link_libraries(test-empty CONAN_PKG::SOCI CONAN_PKG::catch ${PostgreSQL_LIBRARIES})
